Bug 697647 - VideoFrame's visible region should use the pre-transform size rather than the raw video buffer size.  r=roc